[package]
name = "feedfinder"
description = "Auto-discovery of feeds in HTML content"
version = "0.2.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

documentation = "https://docs.rs/crate/feedfinder/"
repository = "https://github.com/wezm/feedfinder"

readme = "README.md"
license = "MIT"

keywords = ["rss", "atom", "discovery", "feed"]
categories = ["web-programming"]

[badges]
travis-ci = { repository = "wezm/feedfinder" }

[dependencies]
kuchiki = "0.8"
url = ">= 1.7.1, < 3"
